# palette

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  bors.toml  codecov.yml  crates.js  help.html  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js  version.sh
benchmarks/: Cargo.toml
benchmarks/benches/: cie.rs  matrix.rs  rgb.rs
codegen/: Cargo.toml
codegen/src/: codegen_file.rs  lut.rs  main.rs  named.rs
integration_tests/: Cargo.toml
integration_tests/tests/: color_checker.rs  pointer_convert.rs
no_std_test/: Cargo.toml
no_std_test/src/: main.rs
palette/: Cargo.toml  README.md  all.html  derive.Pixel.html  derive.WithAlpha.html  fn.contrast_ratio.html  index.html  sidebar-items.js  struct.Alpha.html  struct.FromColorMutGuard.html  struct.Hsl.html  struct.Hsluv.html  struct.Hsv.html  struct.Hwb.html  struct.Lab.html  struct.LabHue.html  struct.Lch.html  struct.Lchuv.html  struct.Luv.html  struct.LuvHue.html  struct.Okhsl.html  struct.Okhsv.html  struct.Okhwb.html  struct.Oklab.html  struct.OklabHue.html  struct.Oklch.html  struct.Packed.html  struct.RgbHue.html  struct.Xyz.html  struct.Yxy.html  trait.ArrayExt.html  trait.Blend.html  trait.Clamp.html  trait.ClampAssign.html  trait.ColorDifference.html  trait.Component.html  trait.ComponentWise.html  trait.Darken.html  trait.DarkenAssign.html  trait.Desaturate.html  (+62 more)
palette/alpha/: index.html  sidebar-items.js  struct.Alpha.html  struct.Iter.html  struct.UniformAlpha.html  trait.WithAlpha.html
palette/angle/: index.html  sidebar-items.js  trait.AngleEq.html  trait.FromAngle.html  trait.FullRotation.html  trait.HalfRotation.html  trait.IntoAngle.html  trait.RealAngle.html  trait.SignedAngle.html  trait.UnsignedAngle.html
palette/benches/: cie.rs  matrix.rs  rgb.rs
palette/blend/: enum.Equation.html  enum.Parameter.html  index.html  sidebar-items.js  struct.Equations.html  struct.Parameters.html  struct.PreAlpha.html  trait.Blend.html  trait.BlendFunction.html  trait.BlendWith.html  trait.Compose.html  trait.Premultiply.html
palette/bool_mask/: index.html  sidebar-items.js  trait.BitOps.html  trait.BoolMask.html  trait.HasBoolMask.html  trait.LazySelect.html  trait.Select.html
palette/cam16/: enum.Discounting.html  enum.Surround.html  index.html  sidebar-items.js  struct.BakedParameters.html  struct.Cam16.html  struct.Cam16Jch.html  struct.Cam16Jmh.html  struct.Cam16Jsh.html  struct.Cam16Qch.html  struct.Cam16Qmh.html  struct.Cam16Qsh.html  struct.Cam16UcsJab.html  struct.Cam16UcsJabIter.html  struct.Cam16UcsJmh.html  struct.Cam16UcsJmhIter.html  struct.Parameters.html  struct.StaticWp.html  struct.UniformCam16UcsJab.html  struct.UniformCam16UcsJmh.html  trait.Cam16FromUnclamped.html  trait.Cam16IntoUnclamped.html  trait.FromCam16Unclamped.html  trait.IntoCam16Unclamped.html  trait.WhitePointParameter.html  type.Cam16Jcha.html  type.Cam16Jmha.html  type.Cam16Jsha.html  type.Cam16Qcha.html  type.Cam16Qmha.html  type.Cam16Qsha.html  type.Cam16UcsJaba.html  type.Cam16UcsJmha.html  type.Cam16a.html
palette/cast/: derive.ArrayCast.html  enum.VecCastErrorKind.html  fn.from_array.html  fn.from_array_array.html  fn.from_array_box.html  fn.from_array_mut.html  fn.from_array_ref.html  fn.from_array_slice.html  fn.from_array_slice_box.html  fn.from_array_slice_mut.html  fn.from_array_vec.html  fn.from_component_array.html  fn.from_component_slice.html  fn.from_component_slice_box.html  fn.from_component_slice_mut.html  fn.from_component_vec.html  fn.from_uint.html  fn.from_uint_array.html  fn.from_uint_mut.html  fn.from_uint_ref.html  fn.from_uint_slice.html  fn.from_uint_slice_box.html  fn.from_uint_slice_mut.html  fn.from_uint_vec.html  fn.into_array.html  fn.into_array_array.html  fn.into_array_box.html  fn.into_array_mut.html  fn.into_array_ref.html  fn.into_array_slice.html  fn.into_array_slice_box.html  fn.into_array_slice_mut.html  fn.into_array_vec.html  fn.into_component_array.html  fn.into_component_slice.html  fn.into_component_slice_box.html  fn.into_component_slice_mut.html  fn.into_component_vec.html  fn.into_uint.html  fn.into_uint_array.html  (+49 more)
palette/chromatic_adaptation/: enum.Method.html  fn.adaptation_matrix.html  fn.diagonal_matrix.html  index.html  sidebar-items.js  struct.ConeResponseMatrices.html  trait.AdaptFrom.html  trait.AdaptFromUnclamped.html  trait.AdaptInto.html  trait.AdaptIntoUnclamped.html  trait.TransformMatrix.html
palette/color_difference/: index.html  sidebar-items.js  trait.Ciede2000.html  trait.ColorDifference.html  trait.DeltaE.html  trait.EuclideanDistance.html  trait.HyAb.html  trait.ImprovedCiede2000.html  trait.ImprovedDeltaE.html  trait.Wcag21RelativeContrast.html
palette/color_theory/: index.html  sidebar-items.js  trait.Analogous.html  trait.Complementary.html  trait.SplitComplementary.html  trait.Tetradic.html  trait.Triadic.html
palette/component/: trait.Component.html  trait.FloatComponent.html  trait.FromComponent.html  trait.IntoComponent.html
palette/convert/: derive.FromColorUnclamped.html  index.html  sidebar-items.js  struct.FromColorMutGuard.html  struct.FromColorUnclampedMutGuard.html  struct.Matrix3.html  struct.OutOfBounds.html  trait.Convert.html  trait.ConvertOnce.html  trait.FromColor.html  trait.FromColorMut.html  trait.FromColorUnclamped.html  trait.FromColorUnclampedMut.html  trait.IntoColor.html  trait.IntoColorMut.html  trait.IntoColorUnclamped.html  trait.IntoColorUnclampedMut.html  trait.TryFromColor.html  trait.TryIntoColor.html
palette/encoding/: index.html  sidebar-items.js  struct.FromLinearLut.html  struct.IntoLinearLut.html  trait.FromLinear.html  trait.GetLutBuilder.html  trait.IntoLinear.html  trait.TransferFn.html
palette/examples/: blend.rs  color_scheme.rs  compose.rs  gradient.rs  hue.rs  random.rs  readme_examples.rs  saturate.rs  shade.rs  struct_of_arrays.rs
palette/float/: index.html  sidebar-items.js  trait.Float.html
palette/gradient/: index.html  (+5 more)
palette_derive/: Cargo.toml  README.md
palette_math/: Cargo.toml  README.md
(+1608 files in other folders)
