[package]
name = "palette"
version = "0.2.1" #automatically updated
authors = ["Erik Hedvall <hello@erikhedvall.nu>"]
exclude = ["scripts/*", "examples/*", "tests/*", "res/*", ".travis.yml", ".gitignore", "CHANGELOG.md", "version.sh"]
description = "Makes linear color calculations and conversion easy and accessible for anyone."
documentation = "https://ogeon.github.io/docs/palette/master/palette/index.html"
repository = "https://github.com/Ogeon/palette"
readme = "README.md"
keywords = ["color", "colour", "space", "linear"]
license = "MIT OR Apache-2.0"

build = "build/main.rs"

[features]
default = ["named_from_str"]
named_from_str = ["named", "phf", "phf_codegen"]
named = []

#internal
strict = []

[dependencies]
num = "0.1"
approx = "0.1"

[dependencies.phf]
version = "0.7"
optional = true

[dev-dependencies]
image = "0.14.0"
clap = "2.24.0"
csv = "1.0.0-beta.3"
serde = "1.0.0"
serde_derive = "1.0.0"
lazy_static = "0.2.0"

[build-dependencies.phf_codegen]
version = "0.7"
optional = true
