[package]
name = "integration_tests"
version = "0.0.0"
authors = ["Erik Hedvall <hello@erikhedvall.nu>"]
exclude = []
description = "Integration test crate for palette."
repository = "https://github.com/Ogeon/palette"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[[example]]
name = "issue_283"
path = "regression_tests/issue_283.rs"

[dev-dependencies]
approx = { version = "0.5", default-features = false }
csv = "1"
lazy_static = "1"
palette = { path = "../palette", features = ["wide"] }
scad = "1.2.2" # For regression testing #283
serde = "1"
serde_derive = "1"
serde_json = "1"

[dev-dependencies.wide]
version = "0.7.3"
default-features = false
