[package]
name = "no_std_test"
version = "0.0.0"
authors = ["Erik Hedvall <hello@erikhedvall.nu>"]
exclude = []
description = "Test crate for #[no_std]."
repository = "https://github.com/Ogeon/palette"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[[bin]]
name = "no_std_test"
bench = false

[features]
nightly = []
# Avoids getting these features included in other packages in the same workspace.
all_features = ["palette/libm", "palette/named", "palette/wide", "palette/simba"]

[dependencies.libc]
version = "0.2"
default-features = false

[dependencies.palette]
path = "../palette"
default-features = false
