[package]
name = "palette"
version = "0.6.1" #automatically updated
authors = ["Erik Hedvall <hello@erikhedvall.nu>"]
exclude = [
    "scripts/*",
    "examples/*",
    "tests/*",
    "benches/*",
    "res/*",
    ".travis.yml",
    ".gitignore",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "version.sh",
]
description = "Convert and manage colors with a focus on correctness, flexibility and ease of use."
documentation = "https://docs.rs/palette/0.6.1/palette/"
repository = "https://github.com/Ogeon/palette"
readme = "README.md"
keywords = ["color", "conversion", "linear", "pixel", "rgb"]
license = "MIT OR Apache-2.0"
edition = "2018"
resolver = "2"
categories = ["graphics", "multimedia::images", "no-std"]
build = "build/main.rs"

[features]
default = ["named_from_str", "std", "approx"]
named_from_str = ["named", "phf"]
named = []
random = ["rand"]
serializing = ["serde", "std"]
#ignore in feature test
find-crate = ["palette_derive/find-crate"]
std = ["approx?/std"]

[lib]
bench = false

[dependencies]
palette_derive = { version = "0.6.1", path = "../palette_derive" }
fast-srgb8 = "1.0.0"
approx = { version = "0.5", default-features = false, optional = true }
libm = { version = "0.2.1", default-features = false, optional = true }

[dependencies.phf]
version = "0.11.0"
optional = true
default-features = false
features = ["macros"]

[dependencies.rand]
version = "0.8"
default-features = false
optional = true

[dependencies.serde]
version = "1"
features = ["serde_derive"]
optional = true

[dependencies.bytemuck]
version = "1"
optional = true

[dependencies.wide]
version = "0.7.3"
optional = true
default-features = false

[dev-dependencies]
csv = "1"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
enterpolation = "0.2.0"

[dev-dependencies.clap]
version = "3.2.23"
default-features = false

[dev-dependencies.criterion]
version = "0.4.0"
default-features = false

[dev-dependencies.image]
version = "0.23.14"
default-features = false
features = ["png"]

[dev-dependencies.rand_mt]
version = "4"
default-features = false
features = ["rand-traits"]

[[bench]]
path = "benches/cie.rs"
name = "cie_conversion"
harness = false

[[bench]]
path = "benches/rgb.rs"
name = "rgb_conversion"
harness = false

[[bench]]
path = "benches/matrix.rs"
name = "matrix"
harness = false
