[package]
name = "palette_derive"
version = "0.4.1" #automatically updated
authors = ["Erik Hedvall <hello@erikhedvall.nu>"]
exclude = []
description = "Automatically implement traits from the palette crate."
documentation = "https://docs.rs/palette/0.4.1/palette/"
repository = "https://github.com/Ogeon/palette"
readme = "README.md"
keywords = ["palette", "derive", "macros"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4"

[features]

#internal
strict = []
